css/styles.css
ul,
ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}
img {
  display: block;
}
body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #ffffff;
}
.header {
  border-bottom: 1px solid #e7e9fc;
}
.container {
  width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

.header-container {
  display: flex;
  align-items: center;
}
.navigation {
  display: flex;
  align-items: center;
}
.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
  margin-right: 76px;
}

.logo-part {
  color: #2e2f42;
}
.nav-list {
  display: flex;
  gap: 40px;
}
.nav-link {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
  padding: 24px 0;
  display: block;
}

.nav-link:hover,
.nav-link:focus {
  color: #404bbf;
}

.address {
  font-style: normal;
  margin-left: auto;
}
.address-list {
  display: flex;
  gap: 40px;
}
.address-link {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.address-link:hover,
.address-link:focus {
  color: #404bbf;
}

.hero {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  background-color: #2e2f42;
  padding: 188px 0;
}
.hero-container {
  padding-left: 331px;
  padding-right: 331px;
}
.main-header {
  max-width: 496px;
  margin-bottom: 48px;
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: #fff;
}

button {
  cursor: pointer;
}

.button {
  border-radius: 4px;
  padding: 16px 32px;
  min-width: 169px;
  height: 56px;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  background-color: #4d5ae5;
  border: none;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  background: #4d5ae5;
  margin: auto;
  display: block;
}

button:hover,
button:focus {
  background-color: #404bbf;
}
.section {
  padding-top: 120px;
  padding-bottom: 120px;
}
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.about-us-header {
  margin-bottom: 8px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
}
.about-us-part {
  width: calc((100% - 72px) / 4);
}
.about-us-list {
  display: flex;
  gap: 24px;
  max-width: 1128px;
}
.about-us-item {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.team-header {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  text-transform: capitalize;
  color: #2e2f42;
  margin-bottom: 72px;
}

.team {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  background-color: #f4f4fd;
}
.team-list {
  display: flex;
  gap: 24px;
}
.team-container-part {
  padding: 32px 0;
}
.team-item {
  border-radius: 0 0 4px 4px;
  padding: 0px 0px 32px 0px;
  max-width: 264px;
  background-color: #fff;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-top: 32px;
  margin-bottom: 8px;
}

.team-name-item {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-align: center;
}
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  row-gap: 48px;
  gap: 24px;
}
.portfolio-item-container {
  padding: 32px 16px;
  border: 1px solid #e7e9fc;
  border-top: none;
}
.portfolio-item {
  max-width: calc((100% - 48px) / 3);
  background: #fff;
}

.portfolio-item-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-top: 32px;
  margin-bottom: 8px;
}

.portfolio-item-type {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
}

.footer {
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  background-color: #2e2f42;
  padding: 100px 0;
}
.footer-container {
  padding-left: 156px;
  padding-right: 1020px;
}
.footer-logo {
  display: inline-block;
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
  margin-bottom: 16px;
}

.footer-logo-part {
  color: #f4f4fd;
}

.footer-item {
  min-width: 264px;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
}

